--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vercel": "^37.14.0"
   },
   "devDependencies": {
     "@types/node": "^20",
