--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@tabler/icons-react": "^3.21.0",
     "class-variance-authority": "^0.7.0",
@@ -33,5 +34,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
-  
 }
