--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@designbycode/tailwindcss-text-stroke": "^1.3.0",
     "@fontsource/montserrat": "^5.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@tabler/icons-react": "^3.21.0",
