--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
