--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/montserrat": "^5.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@supabase/supabase-js": "^2.47.8",
     "@tabler/icons-react": "^3.21.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
