--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vercel": "^37.14.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
