--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@supabase/supabase-js": "^2.47.8",
     "@tabler/icons-react": "^3.21.0",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
